fixed bug where long chat lines overflowed

--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ html {
 	margin-bottom: 10px;
 	max-width: 90%;
 	border-radius: 5px;
+	overflow: auto;
 }
 
 .item_left {
